添加联系页面

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ logo: /siteicon.png
 description: 开放, 专业, 自由的量化交易社区
 author:
   name: 杜梦如
-  email: 393570727@qq.com
+  email: mengru.du@foxmail.com
   twitter: # twitter username without the @ symbol
 social:
   name: 量化交易社区
